# syng

./: .cursorignore  .cz.json  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APP-STORE-EXCEPTION  LICENSE.md  License-CC-CEDICT.md  License-JunDa.md  License-Node-CC-CEDICT.md  MIGRATION.md  Makefile  README.md  RELEASING.md  ROADMAP.md  eslint.config.js  index.html  jest.config.js  latest-release.json  main.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.js
.github/workflows/: build-test.yml  commit.yml  lint.yml  release.yml  test.yml
app/: package.json
app/src/: app.js  build.js  databaseManager.js  engine.js  index.html  main.js  menu.js  onePage.js  syng.js
app/src/component/aboutSyng/: aboutSyng.vue
app/src/component/bookmarks/: bookmarks.vue  notes.vue
app/src/component/search/: search.vue
app/src/component/study/: study.vue
app/src/component/syngMenu/: syngMenu.vue
app/src/component/tools/: tools.vue
app/src/component/viewLicense/: viewLicense.vue
app/src/component/yuedu/: clipboard.vue  library.vue  reader.vue  selector.vue  web.vue  yuedu.vue
app/src/db/junda/: classical.json  modern.json
app/src/lib/pinyin-color/: pinyinColorUtils.js
app/src/lib/tts.js/: README.md  README_CN.md  index.html  package-lock.json  package.json
app/src/pages/: characterConvert.js  splash.js
app/src/resources/: defaults.json
app/src/templates/: .eslintrc.js  App.svelte  CharacterWindow.svelte  CharacterWindow.test.js  app.js
app/src/templates/routes/: Bookmarks.svelte  Chat.svelte  Reader.svelte  Search.macos.test.js  Search.svelte  Search.test.js  Settings.svelte  Study.svelte  Tools.svelte
app/src/templates/styles/: syui.css  theme.css
app/src/templates/utils/: error.js  index.js  pouchdb-7.3.0.min.js  preferenceManager.js  preferenceManager.test.js  process.js  process.test.js  suppression.js  suppression.test.js
app/style/css/: bookmarks.css  dict.css  textboxes.css
app/test/utils/: unitTestUtils.js
app/views/: about.html  bookmarks.html  characterConvert.html  flashcards.html  index.html  lgChar.html  main.html  manageLists.html  onePage.html  pinyinConvert.html  splash.html  test-bookmarks.html  test-random.html
assets/icon-apple-variant.icon/: icon.json
assets/syng-logo-mac/: syng-logo_1024x1024.icns  syng-logo_128x128.icns  syng-logo_2048x2048.icns  syng-logo_256x256.icns  syng-logo_384x384.icns  syng-logo_4096x4096.icns
src/: bookmarks.js  convertPinyin.js  engine.js  flashcards.js  lgChar.js  main.js  node-cc-cedict.js  search.js  splash.js  study.js  sys.js  test-bookmarks.js  test-random.js  test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/db/: convertPinyin.js
src/db/syng/: bookmarks
src/log/: debug.js
src/menu/: dict_menu.js
src/native/: Cargo.toml  entitlements.mas.plist  tauri.conf.json  tauri.ios.offline.conf.json  tauri.linux.conf.json  tauri.mas.conf.json  tauri.mobile.conf.json
src/native/capabilities/: desktop.json  migrated.json  mobile.json
src/native/icons/: icon.icns
src/native/src/: core.rs  dictionary.rs  io.rs  lib.rs  main.rs  menu.rs  platform.rs  quiz.rs  utils.rs  windows.rs
src/native/src/core/: acknowledgements.rs  dictionary.rs  io.rs  migration.rs  reader.rs  telemetry.rs  tools.rs
src/native/src/core/reader/: docx.rs  epub.rs  html.rs  mod.rs  pdf.rs  rtf.rs  text.rs
src/native/src/platform/: ios.rs  macos.rs
src/native/src/utils/: build.rs  syrver.rs  word_utils.rs
src/native/src/windows/: character.rs  main.rs
src/node-cc-cedict/: README.md  index.js  node-cc-cedict.js  package.json
src/node-cc-cedict/parser/: dictionary-parser.js
src/node-cc-cedict/test/: test.js
src/test/utils/: unitTestUtils.js
src/views/: characters.html  index.html
src/views/templates/: App.svelte  CharacterWindow.svelte  CharacterWindow.test.js  MobileApp.svelte  MobileApp.test.js  app.js
src/views/templates/actions/: cursorToEnd.svelte.ts  cursorToEnd.test.js  portal.svelte.ts  portal.test.js  readerPageSwipe.svelte.ts  readerPageSwipe.test.js  scrollRestore.svelte.ts  scrollRestore.test.js  snapSheetDrag.svelte.ts  snapSheetDrag.test.js  swipeBack.svelte.ts
src/views/templates/components/: ReaderBookCard.svelte  ReaderClipboardImportBody.svelte  ReaderClipboardImportModal.svelte  ReaderColorSwatches.svelte  ReaderDocumentImportBody.svelte  ReaderDocumentImportModal.svelte  ReaderDocumentMetadataModal.svelte  ReaderImportModal.svelte  ReaderLibrary.svelte  ReaderMetadataFields.svelte  ReaderModalFooter.svelte  (+5 more)
style/css/: bookmarks.css  bootstrap.css  dict.css  layout.css  materialize.css  photon.css  style.css  sys.css  test.css
views/: about.html  bookmarks.html  flashcards.html  index.html  pinyinConvert.html  splash.html  study.html  test-bookmarks.html  test-random.html  test.html
(+309 files in other folders)
