[package]
name = "syng"
version = "2.0.0"
description = "An open source, cross platform, Chinese study toolkit."
authors = ["Preston Wang-Stosur-Bassett"]
license = "GPL-3.0"
repository = "https://github.com/sotch-pr35mac/syng"
default-run = "syng"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
chinese_dictionary = "2.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
