[package]
name = "syng"
version = "0.0.6"
description = "An open source, cross platform, Chinese study toolkit."
authors = ["Preston Wang-Stosur-Bassett"]
license = "GPL-3.0"
repository = "https://github.com/sotch-pr35mac/syng"
default-run = "syng"
edition = "2021"
rust-version = "1.64"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
chinese_dictionary = "2.1.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = ["api-all", "updater"] }
rand = "0.8.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
