[package]
name = "syng"
version = "0.0.7"
description = "An open source, cross platform, Chinese study toolkit."
authors = ["Preston Wang-Stosur-Bassett"]
license = "GPL-3.0"
repository = "https://github.com/sotch-pr35mac/syng"
default-run = "syng"
edition = "2021"
rust-version = "1.64"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chinese_dictionary = "2.1.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
rand = "0.8.5"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-cli = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
objc = "0.2.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "syng_lib"
crate-type = ["cdylib", "rlib"]
